--- a/programme-GMT+6.html
+++ b/programme-GMT+6.html
@@ -46,7 +46,7 @@ Computing</h2>
    </td>
 </tr>
 </center>
-<a name = "SCHEDULE"></a><h2 style="color:#B40431;">SESSION SCHEDULE BY TIME ZONE</h3>
+<a name = "SCHEDULE"></a><h2 style="color:#B40431;">SESSION SCHEDULE BY TIME ZONE</h2>
 
 <table border = "1">
   <tr align = "left">
@@ -73,25 +73,25 @@ Computing</h2>
   </tr>
   <tr align = "left">
     <th style='border-top:none'>or Break</th>
-    <th style='border-top:none'>-6:00</th>
-    <th style='border-top:none'>-5:00</th>
-    <th style='border-top:none'>-4:00</th>
-    <th style='border-top:none'>-3:00</th>
-    <th style='border-top:none'></th>
-    <th style='border-top:none'>+1:00</th>
-    <th style='border-top:none'>+2:00</th>
-    <th style='border-top:none'>+3:00</th>
-    <th style='border-top:none'>+4:00</th>
-    <th style='border-top:none'>+4:30</th>
-    <th style='border-top:none'>+5:00</th>
-    <th style='border-top:none'>+5:30</th>
-    <th style='border-top:none'>+6:00</th>
-    <th style='border-top:none'>+7:00</th>
-    <th style='border-top:none'>+8:00</th>
-    <th style='border-top:none'>+9:00</th>
-    <th style='border-top:none'>+9:30</th>
-    <th style='border-top:none'>+10:00</th>
-    <th style='border-top:none'>+12:00</th>
+    <th style='border-top:none'><a style="color:#B40431;">-6:00</a></th>
+    <th style='border-top:none'><a style="color:#B40431;">-5:00</a></th>
+    <th style='border-top:none'><a style="color:#B40431;">-4:00</a></th>
+    <th style='border-top:none'><a style="color:#B40431;">-3:00</a></th>
+    <th style='border-top:none'></a></th>
+    <th style='border-top:none'><a style="color:#B40431;">+1:00</a></th>
+    <th style='border-top:none'><a style="color:#B40431;">+2:00</a></th>
+    <th style='border-top:none'><a style="color:#B40431;">+3:00</a></th>
+    <th style='border-top:none'><a style="color:#B40431;">+4:00</a></th>
+    <th style='border-top:none'><a style="color:#B40431;">+4:30</a></th>
+    <th style='border-top:none'><a style="color:#B40431;">+5:00</a></th>
+    <th style='border-top:none'><a style="color:#B40431;">+5:30</a></th>
+    <th style='border-top:none'><a style="color:#B40431;">+6:00</a></th>
+    <th style='border-top:none'><a style="color:#B40431;">+7:00</a></th>
+    <th style='border-top:none'><a style="color:#B40431;">+8:00</a></th>
+    <th style='border-top:none'><a style="color:#B40431;">+9:00</a></th>
+    <th style='border-top:none'><a style="color:#B40431;">+9:30</a></th>
+    <th style='border-top:none'><a style="color:#B40431;">+10:00</a></th>
+    <th style='border-top:none'><a style="color:#B40431;">+12:00</a></th>
   </tr>
   <tr align = "left">
     <td><strong><a href = "#OPENING">OPENING</a></stong></td>
@@ -118,25 +118,25 @@ Computing</h2>
 </table>
 <h3 style="color:#B40431;">Time zones:</h3>
 <ul>
-  <li><a style="color:#B40431;">GMT-6:00:</a> Central America, US/Canada Mountain Time<\/li>
-  <li><a style="color:#B40431;">GMT-5:00:</a> Bogota, Lima, Mexico City, Quito, Rio Branco, US/Canada Central Time</li>
-  <li><a style="color:#B40431;">GMT-4:00</a> Caracas, Cuba, La Paz, Santiago, US/Canada Eastern Time</li>
-  <li><a style="color:#B40431;">GMT-3:00</a> Brasilia, Buenos Aires, Montevideo</li>
-  <li><a style="color:#B40431;">GMT:</a> Azores, Monrovia, Reykjavik</li>
-  <li><a style="color:#B40431;">GMT+1:00</a> Dublin, Lisbon, London, West Central Africa</li>
-  <li><a style="color:#B40431;">GMT+2:00</a> Pretoria, CEST (Berlin, Budapest, Madrid, Oslo, Paris, Rome, Stockholm, Vienna)</li>
-  <li><a style="color:#B40431;">GMT+3:00</a> Beirut, Jerusalem, Minsk, Moscow, Nairobi, St. Petersburg</li>
-  <li><a style="color:#B40431;">GMT+4:00</a> Abu Dhabi, Muscat, Yerevan</li>
-  <li><a style="color:#B40431;">GMT+4:30</a> Kabul, Tehran</li>
-  <li><a style="color:#B40431;">GMT+5:00</a> Ekaterinburg, Tashkent, West Kazakhstan (Aqtobe, Atyrau, Oral)</li>
-  <li><a style="color:#B40431;">GMT+5:30</a> Kolkata, Mumbai, New Delhi</li>
-  <li><a style="color:#B40431;">GMT+6:00</a> Dhaka, East Kazakhstan (Almaty, Karagandy, Nur-Sultan, Taraz)</li>
-  <li><a style="color:#B40431;">GMT+7:00</a> Bangkok, Hanoi, Jakarta, Novosibirsk</li>
-  <li><a style="color:#B40431;">GMT+8:00</a> Beijing, Hong Kong, Macau, Irkutsk, Perth, Ulan Batur</li>
-  <li><a style="color:#B40431;">GMT+9:00</a> Seoul, Tokyo, Yakutsk</li>
-  <li><a style="color:#B40431;">GMT+9:30</a> Adelaide, Darwin</li>
-  <li><a style="color:#B40431;">GMT+10:00</a> Brisbane, Hobart, Melbourne, Sydney, Vladivostok</li>
-  <li><a style="color:#B40431;">GMT+12:00</a> Auckland, Fiji, Wellington</li>
+  <li><strong><a style="color:#B40431;">GMT-6:00</a>:</strong> Central America, US/Canada Mountain Time<\/li>
+  <li><strong><a style="color:#B40431;">GMT-5:00:</a></strong> Bogota, Lima, Mexico City, Quito, Rio Branco, US/Canada Central Time</li>
+  <li><strong><a style="color:#B40431;">GMT-4:00</a></strong> Caracas, Cuba, La Paz, Santiago, US/Canada Eastern Time</li>
+  <li><strong><a style="color:#B40431;">GMT-3:00</a></strong> Brasilia, Buenos Aires, Montevideo</li>
+  <li><strong><a style="color:#B40431;">GMT:</a></strong> Azores, Monrovia, Reykjavik</li>
+  <li><strong><a style="color:#B40431;">GMT+1:00</a></strong> Dublin, Lisbon, London, West Central Africa</li>
+  <li><strong><a style="color:#B40431;">GMT+2:00</a></strong> Pretoria, CEST (Berlin, Budapest, Madrid, Oslo, Paris, Rome, Stockholm, Vienna)</li>
+  <li><strong><a style="color:#B40431;">GMT+3:00</a></strong> Beirut, Jerusalem, Minsk, Moscow, Nairobi, St. Petersburg</li>
+  <li><strong><a style="color:#B40431;">GMT+4:00</a></strong> Abu Dhabi, Muscat, Yerevan</li>
+  <li><strong><a style="color:#B40431;">GMT+4:30</a></strong> Kabul, Tehran</li>
+  <li><strong><a style="color:#B40431;">GMT+5:00</a></strong> Ekaterinburg, Tashkent, West Kazakhstan (Aqtobe, Atyrau, Oral)</li>
+  <li><strong><a style="color:#B40431;">GMT+5:30</a></strong> Kolkata, Mumbai, New Delhi</li>
+  <li><strong><a style="color:#B40431;">GMT+6:00</a></strong> Dhaka, East Kazakhstan (Almaty, Karagandy, Nur-Sultan, Taraz)</li>
+  <li><strong><a style="color:#B40431;">GMT+7:00</a></strong> Bangkok, Hanoi, Jakarta, Novosibirsk</li>
+  <li><strong><a style="color:#B40431;">GMT+8:00</a></strong> Beijing, Hong Kong, Macau, Irkutsk, Perth, Ulan Batur</li>
+  <li><strong><a style="color:#B40431;">GMT+9:00</a></strong> Seoul, Tokyo, Yakutsk</li>
+  <li><strong><a style="color:#B40431;">GMT+9:30</a></strong> Adelaide, Darwin</li>
+  <li><strong><a style="color:#B40431;">GMT+10:00</a></strong> Brisbane, Hobart, Melbourne, Sydney, Vladivostok</li>
+  <li><strong><a style="color:#B40431;">GMT+12:00</a></strong> Auckland, Fiji, Wellington</li>
 </ul>	
 		
 <h3 style="color:#000000;">Schedule for Other Time Zone:
