--- a/programme-GMT+6.html
+++ b/programme-GMT+6.html
@@ -46,10 +46,11 @@ Computing</h2>
    </td>
 </tr>
 </center>
-<a name = "SCHEDULE"></a><h2 style="color:#B40431;">SESSION SCHEDULE BY TIME ZONE</h2>
-
-<table border = "1">
-  <tr align = "left">
+<a name="SCHEDULE"></a><h2 style="color:#B40431;">SESSION SCHEDULE BY TIME ZONE</h2>
+<p>This table shows ther starting time of each session by time zone.
+   Click on the session name to see the session detailed information</p>
+<table border="1">
+  <tr align="left">
     <th style='border-bottom:none'>Session</th>
     <th style='border-bottom:none'><a style="color:#B40431;">GMT</a></th>
     <th style='border-bottom:none'><a style="color:#B40431;">GMT</a></th>
@@ -118,25 +119,25 @@ Computing</h2>
 </table>
 <h3 style="color:#B40431;">Time zones:</h3>
 <ul>
-  <li><strong><a style="color:#B40431;">GMT-6:00</a>:</strong> Central America, US/Canada Mountain Time<\/li>
-  <li><strong><a style="color:#B40431;">GMT-5:00:</a></strong> Bogota, Lima, Mexico City, Quito, Rio Branco, US/Canada Central Time</li>
-  <li><strong><a style="color:#B40431;">GMT-4:00</a></strong> Caracas, Cuba, La Paz, Santiago, US/Canada Eastern Time</li>
-  <li><strong><a style="color:#B40431;">GMT-3:00</a></strong> Brasilia, Buenos Aires, Montevideo</li>
-  <li><strong><a style="color:#B40431;">GMT:</a></strong> Azores, Monrovia, Reykjavik</li>
-  <li><strong><a style="color:#B40431;">GMT+1:00</a></strong> Dublin, Lisbon, London, West Central Africa</li>
-  <li><strong><a style="color:#B40431;">GMT+2:00</a></strong> Pretoria, CEST (Berlin, Budapest, Madrid, Oslo, Paris, Rome, Stockholm, Vienna)</li>
-  <li><strong><a style="color:#B40431;">GMT+3:00</a></strong> Beirut, Jerusalem, Minsk, Moscow, Nairobi, St. Petersburg</li>
-  <li><strong><a style="color:#B40431;">GMT+4:00</a></strong> Abu Dhabi, Muscat, Yerevan</li>
-  <li><strong><a style="color:#B40431;">GMT+4:30</a></strong> Kabul, Tehran</li>
-  <li><strong><a style="color:#B40431;">GMT+5:00</a></strong> Ekaterinburg, Tashkent, West Kazakhstan (Aqtobe, Atyrau, Oral)</li>
-  <li><strong><a style="color:#B40431;">GMT+5:30</a></strong> Kolkata, Mumbai, New Delhi</li>
-  <li><strong><a style="color:#B40431;">GMT+6:00</a></strong> Dhaka, East Kazakhstan (Almaty, Karagandy, Nur-Sultan, Taraz)</li>
-  <li><strong><a style="color:#B40431;">GMT+7:00</a></strong> Bangkok, Hanoi, Jakarta, Novosibirsk</li>
-  <li><strong><a style="color:#B40431;">GMT+8:00</a></strong> Beijing, Hong Kong, Macau, Irkutsk, Perth, Ulan Batur</li>
-  <li><strong><a style="color:#B40431;">GMT+9:00</a></strong> Seoul, Tokyo, Yakutsk</li>
-  <li><strong><a style="color:#B40431;">GMT+9:30</a></strong> Adelaide, Darwin</li>
-  <li><strong><a style="color:#B40431;">GMT+10:00</a></strong> Brisbane, Hobart, Melbourne, Sydney, Vladivostok</li>
-  <li><strong><a style="color:#B40431;">GMT+12:00</a></strong> Auckland, Fiji, Wellington</li>
+  <li><strong><a style="color:#B40431;">GMT-6:00</a> - </strong> Central America, US/Canada Mountain Time</li>
+  <li><strong><a style="color:#B40431;">GMT-5:00</a> - </strong> Bogota, Lima, Mexico City, Quito, Rio Branco, US/Canada Central Time</li>
+  <li><strong><a style="color:#B40431;">GMT-4:00</a> - </strong> Caracas, Cuba, La Paz, Santiago, US/Canada Eastern Time</li>
+  <li><strong><a style="color:#B40431;">GMT-3:00</a> - </strong> Brasilia, Buenos Aires, Montevideo</li>
+  <li><strong><a style="color:#B40431;">GMT:</a> - </strong> Azores, Monrovia, Reykjavik</li>
+  <li><strong><a style="color:#B40431;">GMT+1:00</a> - </strong> Dublin, Lisbon, London, West Central Africa</li>
+  <li><strong><a style="color:#B40431;">GMT+2:00</a> - </strong> Pretoria, CEST (Berlin, Budapest, Madrid, Oslo, Paris, Rome, Stockholm, Vienna)</li>
+  <li><strong><a style="color:#B40431;">GMT+3:00</a> - </strong> Beirut, Jerusalem, Minsk, Moscow, Nairobi, St. Petersburg</li>
+  <li><strong><a style="color:#B40431;">GMT+4:00</a> - </strong> Abu Dhabi, Muscat, Yerevan</li>
+  <li><strong><a style="color:#B40431;">GMT+4:30</a> - </strong> Kabul, Tehran</li>
+  <li><strong><a style="color:#B40431;">GMT+5:00</a> - </strong> Ekaterinburg, Tashkent, West Kazakhstan (Aqtobe, Atyrau, Oral)</li>
+  <li><strong><a style="color:#B40431;">GMT+5:30</a> - </strong> Kolkata, Mumbai, New Delhi</li>
+  <li><strong><a style="color:#B40431;">GMT+6:00</a> - </strong> Dhaka, East Kazakhstan (Almaty, Karagandy, Nur-Sultan, Taraz)</li>
+  <li><strong><a style="color:#B40431;">GMT+7:00</a> - </strong> Bangkok, Hanoi, Jakarta, Novosibirsk</li>
+  <li><strong><a style="color:#B40431;">GMT+8:00</a> - </strong> Beijing, Hong Kong, Macau, Irkutsk, Perth, Ulan Batur</li>
+  <li><strong><a style="color:#B40431;">GMT+9:00</a> - </strong> Seoul, Tokyo, Yakutsk</li>
+  <li><strong><a style="color:#B40431;">GMT+9:30</a> - </strong> Adelaide, Darwin</li>
+  <li><strong><a style="color:#B40431;">GMT+10:00</a> - </strong> Brisbane, Hobart, Melbourne, Sydney, Vladivostok</li>
+  <li><strong><a style="color:#B40431;">GMT+12:00</a> - </strong> Auckland, Fiji, Wellington</li>
 </ul>	
 		
 <h3 style="color:#000000;">Schedule for Other Time Zone:
@@ -149,7 +150,7 @@ Computing</h2>
 <h2 style="color:#B40431;">Wednesday, 8 September 2021</h2>
                   <tr>
                     <td>
-		       <a name = "OPENIING"></a>
+		       <a style="color:#B40431;" href="#OPENIING"></a>
                        <p class="text"><strong>13:15-13:30 - OPENING</strong></p>
                     </td>
                   </tr>
