--- a/programme-GMT+6.html
+++ b/programme-GMT+6.html
@@ -47,8 +47,8 @@ Computing</h2>
 </tr>
 </center>
 <a name="SCHEDULE"></a><h2 style="color:#B40431;">SESSION SCHEDULE BY TIME ZONE</h2>
-<p>This table shows ther starting time of each session by time zone.
-   Click on the session name to see the session detailed information</p>
+<p>This table shows the starting time of each session by time zone.
+   Click on the session name to see the session detailed information.</p>
 <table border="1">
   <tr align="left">
     <th style='border-bottom:none'>Session</th>
@@ -95,7 +95,7 @@ Computing</h2>
     <th style='border-top:none'><a style="color:#B40431;">+12:00</a></th>
   </tr>
   <tr align = "left">
-    <td><strong><a href = "#OPENING">OPENING</a></stong></td>
+    <td><strong><a style="color:#B40431;" href="#OPENING">OPENING</a></stong></td>
     <td>1:15</td>
     <td>2:15</td>
     <td>3:15</td>
