--- a/programme-GMT+6.html
+++ b/programme-GMT+6.html
@@ -48,10 +48,11 @@ Computing</h2>
 </center>
 <a name="SCHEDULE"></a><h2 style="color:#B40431;">SESSION SCHEDULE BY TIME ZONE</h2>
 <p>This table shows the starting time of each session by time zone.
-   Click on the session name to see the session detailed information.</p>
+   Click on the day or the session name to see the session detailed information.</p>
 <table border="1">
   <tr align="left">
     <th style='border-bottom:none'>Session</th>
+    <th style='border-bottom:none'>Duration</th>	  
     <th style='border-bottom:none'><a style="color:#B40431;">GMT</a></th>
     <th style='border-bottom:none'><a style="color:#B40431;">GMT</a></th>
     <th style='border-bottom:none'><a style="color:#B40431;">GMT</a></th>
@@ -74,6 +75,7 @@ Computing</h2>
   </tr>
   <tr align = "left">
     <th style='border-top:none'>or Break</th>
+    <th style='border-top:none'></th>
     <th style='border-top:none'><a style="color:#B40431;">-6:00</a></th>
     <th style='border-top:none'><a style="color:#B40431;">-5:00</a></th>
     <th style='border-top:none'><a style="color:#B40431;">-4:00</a></th>
@@ -96,25 +98,26 @@ Computing</h2>
   </tr>
   <tr align = "left">
     <td><strong><a style="color:#B40431;" href="#OPENING">OPENING</a></stong></td>
-    <td>1:15</td>
-    <td>2:15</td>
-    <td>3:15</td>
-    <td>4:15</td>
-    <td>7:15</td>
-    <td>8:15</td>
-    <td>9:15</td>
-    <td>10:15</td>
-    <td>11:15</td>
-    <td>11:45</td>	  
-    <td>12:15</td>
-    <td>12:45</td>
-    <td>13:15</td>
-    <td>14:15</td>
-    <td>15:15</td>  
-    <td>16:15</td>
-    <td>16:45</td>
-    <td>17:15</td>
-    <td>19:15</td>
+    <td><strong>15 min.</strong></td>  
+    <td><strong>1:15</strong></td>
+    <td><strong>2:15</strong></td>
+    <td><strong>3:15</strong></td>
+    <td><strong>4:15</strong></td>
+    <td><strong>7:15</strong></td>
+    <td><strong>8:15</strong></td>
+    <td><strong>9:15</strong></td>
+    <td><strong>10:15</strong></td>
+    <td><strong>11:15</strong></td>
+    <td><strong>11:45</strong></td>	  
+    <td><strong>12:15</strong></td>
+    <td><strong>12:45</strong></td>
+    <td><strong>13:15</strong></td>
+    <td><strong>14:15</strong></td>
+    <td><strong>15:15</strong></td>  
+    <td><strong>16:15</strong></td>
+    <td><strong>16:45</strong></td>
+    <td><strong>17:15</strong></td>
+    <td><strong>19:15</strong></td>
   </tr>
 </table>
 <h3 style="color:#B40431;">Time zones:</h3>
@@ -140,18 +143,18 @@ Computing</h2>
   <li><strong><a style="color:#B40431;">GMT+12:00</a> - </strong> Auckland, Fiji, Wellington</li>
 </ul>	
 		
-<h3 style="color:#000000;">Schedule for Other Time Zone:
- <a style="color:#B40431;" href="/.">GMT+1 (London)</a> |
- <a style="color:#B40431;" href="/.">GMT+2 (CEST)</a>
-</h3>
+<a name="DETAILED"></a><h2 style="color:#B40431;">DETAILED PROGRAMME</h2>
 
 <hr size="1">
 <a name="WED"></a>
 <h2 style="color:#B40431;">Wednesday, 8 September 2021</h2>
                   <tr>
                     <td>
-		       <a style="color:#B40431;" href="#OPENIING"></a>
-                       <p class="text"><strong>13:15-13:30 - OPENING</strong></p>
+		       <a name="OPENIING"></a>
+                       <p class="text"><strong>13:15-13:30 - OPENING</strong>
+			       <br>
+			       (the indicated times refer to East Kazakh time zone)
+		       </p>
                     </td>
                   </tr>
                    <tr>
