--- a/programme-GMT+6.html
+++ b/programme-GMT+6.html
@@ -32,9 +32,8 @@
 <img src="../yurt.jpg" title="Alexandr frolov, CC BY-SA 4.0 &lt;https://creativecommons.org/licenses/by-sa/4.0&gt;, via Wikimedia Commons" alt="Kazakh Yurt" width="700" height="453">
 
 <h1>ICTAC 2021</h1>
-<h2>18th International Colloquium on Theoretical Aspects of
-Computing</h2>
-<h2>VIRTUAL EVENT organied by Nazarbayev University, Nur-Sultan, Kazakhstan, <strong>September 6-10,  2021</strong></h2>
+<h2>18th International Colloquium on Theoretical Aspects of Computing</h2>
+<h2>VIRTUAL EVENT organied by Nazarbayev University, Nur-Sultan, Kazakhstan, <strong>September 6-10, 2021</strong></h2>
 <h1 style="color:#B40431;">PROGRAMME</h1>
 <tr height="10pt">
   <td align="center">
@@ -153,7 +152,8 @@ Computing</h2>
 		       <a name="OPENIING"></a>
                        <p class="text"><strong>13:15-13:30 - OPENING</strong>
 			       <br>
-			       (the indicated times refer to East Kazakh time zone)
+			       (The indicated times refer to <strong>East Kazakhstan time zone</strong>.
+			       See the <strong><a style="color:#B40431;" href="#SCHEDULE">SESSION. SCHEDULEG</a> for other time zones</stong>)
 		       </p>
                     </td>
                   </tr>
