--- a/programme-GMT+6.html
+++ b/programme-GMT+6.html
@@ -165,12 +165,7 @@
                          <br>
                          <a class="link"
                             href="keynote.html">Abstract and Speaker's Biography</a> |
-                         <a class="link"
-                            target="_tabs"
-                            href="slides.pdf">Slides (PDF)</a> |
-                         <a class="link"
-                            target="_tabs"
-                            href="video.mp4">Video</a>
+                         The session video recording will be linked from here.
                       </p>
                     </td>
                    </tr>
