--- a/programme-GMT+6.html
+++ b/programme-GMT+6.html
@@ -149,19 +149,21 @@
 <h2 style="color:#B40431;">Wednesday, 8 September 2021</h2>
                   <tr>
                     <td>
-		       <a name="OPENIING"></a>
-                       <p class="text"><strong>13:15-13:30 - OPENING</strong>
+		       <a name="OPENING"></a>
+			    <p class="text"><strong>13:15-13:30 -  style="color:#B40431;">OPENING</a></strong>
 			       <br>
 			       (The indicated times refer to <strong>East Kazakhstan time zone</strong>.
-			       See the <strong><a style="color:#B40431;" href="#SCHEDULE">SESSION. SCHEDULEG</a> for other time zones</stong>)
+			       See the <strong><a style="color:#B40431;" href="#SCHEDULE">SESSION. SCHEDULE</a> for other time zones</stong>)
 		       </p>
                     </td>
                   </tr>
                    <tr>
                     <td>
-                       <p class="text"><strong>13:30-14:30 - KEYNOTE SPEAKER 1: TBA</strong> (Chair: TBA)
+		       <a name="OPENING"></a>
+                       <p class="text"><strong>13:30-14:30 -  style="color:#B40431;">KEYNOTE SPEAKER 1: Kim Larsen style="color:#B40431;"></strong>
+			       (Chair: Peter Csaba Olveczky)
                          <br>
-                         <strong>TBA</strong>
+                         <strong>Model Checking and Machine Learning Joining Forces</strong>
                          <br>
                          <a class="link"
                             href="keynote.html">Abstract and Speaker's Biography</a> |
