--- a/programme-GMT+6.html
+++ b/programme-GMT+6.html
@@ -150,7 +150,7 @@
                   <tr>
                     <td>
 		       <a name="OPENING"></a>
-			    <p class="text"><strong>13:15-13:30 -  style="color:#B40431;">OPENING</a></strong>
+			    <p class="text"><strong>13:15-13:30 - <a style="color:#B40431;">OPENING</a></strong>
 			       <br>
 			       (The indicated times refer to <strong>East Kazakhstan time zone</strong>.
 			       See the <strong><a style="color:#B40431;" href="#SCHEDULE">SESSION. SCHEDULE</a> for other time zones</stong>)
@@ -160,7 +160,7 @@
                    <tr>
                     <td>
 		       <a name="OPENING"></a>
-                       <p class="text"><strong>13:30-14:30 -  style="color:#B40431;">KEYNOTE SPEAKER 1: Kim Larsen style="color:#B40431;"></strong>
+                       <p class="text"><strong>13:30-14:30 - <a style="color:#B40431;">KEYNOTE SPEAKER 1: Kim Larsen style="color:#B40431;"></strong>
 			       (Chair: Peter Csaba Olveczky)
                          <br>
                          <strong>Model Checking and Machine Learning Joining Forces</strong>
