--- a/programme-GMT+6.html
+++ b/programme-GMT+6.html
@@ -163,7 +163,7 @@
                        <p class="text"><strong>13:30-14:30 - <a style="color:#B40431;">KEYNOTE SPEAKER 1: Kim Larsen style="color:#B40431;"></strong>
 			       (Chair: Peter Csaba Olveczky)
                          <br>
-                         <strong>Model Checking and Machine Learning Joining Forces</strong>
+                         <h3>Model Checking and Machine Learning Joining Forces</h3>
                          <br>
                          <a class="link"
                             href="keynote.html">Abstract and Speaker's Biography</a> |
