--- a/programme-GMT+6.html
+++ b/programme-GMT+6.html
@@ -160,7 +160,7 @@
                    <tr>
                     <td>
 		       <a name="OPENING"></a>
-                       <p class="text"><strong>13:30-14:30 - <a style="color:#B40431;">KEYNOTE SPEAKER 1: Kim Larsen style="color:#B40431;"></strong>
+                       <p class="text"><strong>13:30-14:30 - <a style="color:#B40431;">KEYNOTE SPEAKER 1: Kim Larsen</a></strong>
 			       (Chair: Peter Csaba Olveczky)
                          <br>
                          <h3>Model Checking and Machine Learning Joining Forces</h3>
