--- a/programme-GMT+6.html
+++ b/programme-GMT+6.html
@@ -162,9 +162,9 @@
 		       <a name="OPENING"></a>
                        <p class="text"><strong>13:30-14:30 - <a style="color:#B40431;">KEYNOTE SPEAKER 1: Kim Larsen</a></strong>
 			       (Chair: Peter Csaba Olveczky)
-                         <br>
-                         <h3>Model Checking and Machine Learning Joining Forces</h3>
-                         <br>
+                         <ul>
+                           <li><strong>Model Checking and Machine Learning Joining Forces</strong></li>
+                         <ul>
                          <a class="link"
                             href="keynote.html">Abstract and Speaker's Biography</a> |
                          The session video recording will be linked from here.
