--- a/programme-GMT+6.html
+++ b/programme-GMT+6.html
@@ -152,8 +152,8 @@
 		       <a name="OPENING"></a>
 			    <p class="text"><strong>13:15-13:30 - <a style="color:#B40431;">OPENING</a></strong>
 			       <br>
-			       (The indicated times refer to <strong>East Kazakhstan time zone</strong>.
-			       See the <strong><a style="color:#B40431;" href="#SCHEDULE">SESSION. SCHEDULE</a> for other time zones</stong>)
+			       The indicated times refer to <strong>East Kazakhstan time zone</strong>.
+			       See the <strong><a style="color:#B40431;" href="#SCHEDULE">SESSION. SCHEDULE</a> for other time zones</stong>
 		       </p>
                     </td>
                   </tr>
@@ -161,10 +161,13 @@
                     <td>
 		       <a name="OPENING"></a>
                        <p class="text"><strong>13:30-14:30 - <a style="color:#B40431;">KEYNOTE SPEAKER 1: Kim Larsen</a></strong>
-			       (Chair: Peter Csaba Olveczky)
+			 (Chair: Peter Csaba Olveczky)
+			 <br>
+			 The indicated times refer to <strong>East Kazakhstan time zone</strong>.
+			 See the <strong><a style="color:#B40431;" href="#SCHEDULE">SESSION. SCHEDULE</a> for other time zones</stong>
                          <ul>
                            <li><strong>Model Checking and Machine Learning Joining Forces</strong></li>
-                         <ul>
+                         </ul>
                          <a class="link"
                             href="keynote.html">Abstract and Speaker's Biography</a> |
                          The session video recording will be linked from here.
