--- a/programme-GMT+6.html
+++ b/programme-GMT+6.html
@@ -166,7 +166,7 @@
 			 The indicated times refer to <strong>East Kazakhstan time zone</strong>.
 			 See the <strong><a style="color:#B40431;" href="#SCHEDULE">SESSION. SCHEDULE</a> for other time zones</stong>
                          <ul>
-                           <li><strong>Model Checking and Machine Learning Joining Forces</strong></li>
+                           <li><strong><a style="color:#B40431;">Model Checking and Machine Learning Joining Forces<a></strong></li>
                          </ul>
                          <a class="link"
                             href="keynote.html">Abstract and Speaker's Biography</a> |
