--- a/programme-GMT+6.html
+++ b/programme-GMT+6.html
@@ -153,7 +153,7 @@
 			    <p class="text"><strong>13:15-13:30 - <a style="color:#B40431;">OPENING</a></strong>
 			       <br>
 			       The indicated times refer to <strong>East Kazakhstan time zone</strong>.
-			       See the <strong><a style="color:#B40431;" href="#SCHEDULE">SESSION. SCHEDULE</a> for other time zones</stong>
+			       See the <strong><a style="color:#B40431;" href="#SCHEDULE">SESSION. SCHEDULE</a> for other time zones</strong>
 		       </p>
                     </td>
                   </tr>
@@ -169,6 +169,7 @@
                            <li><strong><a style="color:#B40431;">Model Checking and Machine Learning Joining Forces<a></strong></li>
                          </ul>
                          <a class="link"
+			    style="color:#B40431;"
                             href="keynote.html">Abstract and Speaker's Biography</a> |
                          The session video recording will be linked from here.
                       </p>
