--- a/programme-GMT+6.html
+++ b/programme-GMT+6.html
@@ -50,6 +50,7 @@
    Click on the day or the session name to see the session detailed information.</p>
 <table border="1">
   <tr align="left">
+    <th style='border-bottom:none'>DAY</th>
     <th style='border-bottom:none'>Session</th>
     <th style='border-bottom:none'>Duration</th>	  
     <th style='border-bottom:none'><a style="color:#B40431;">GMT</a></th>
@@ -73,6 +74,7 @@
     <th style='border-bottom:none'><a style="color:#B40431;">GMT</a></th>
   </tr>
   <tr align = "left">
+	  <th style='border-top:none'><a style="color:#B40431;" href="WED">WEDNESDAY</a></th>
     <th style='border-top:none'>or Break</th>
     <th style='border-top:none'></th>
     <th style='border-top:none'><a style="color:#B40431;">-6:00</a></th>
@@ -96,6 +98,7 @@
     <th style='border-top:none'><a style="color:#B40431;">+12:00</a></th>
   </tr>
   <tr align = "left">
+    <td><strong><a style="color:#B40431;">8 September</a></stong></td>
     <td><strong><a style="color:#B40431;" href="#OPENING">OPENING</a></stong></td>
     <td><strong>15 min.</strong></td>  
     <td><strong>1:15</strong></td>
@@ -164,7 +167,7 @@
 			 (Chair: Peter Csaba Olveczky)
 			 <br>
 			 The indicated times refer to <strong>East Kazakhstan time zone</strong>.
-			 See the <strong><a style="color:#B40431;" href="#SCHEDULE">SESSION. SCHEDULE</a> for other time zones</stong>
+			 See the <strong><a style="color:#B40431;" href="#SCHEDULE">SESSION. SCHEDULE</a> for other time zones</strong>
                          <ul>
                            <li><strong><a style="color:#B40431;">Model Checking and Machine Learning Joining Forces<a></strong></li>
                          </ul>
