--- a/programme-GMT+6.html
+++ b/programme-GMT+6.html
@@ -153,21 +153,21 @@
                   <tr>
                     <td>
 		       <a name="OPENING"></a>
-			    <p class="text"><strong>13:15-13:30 - <a style="color:#B40431;">OPENING</a></strong>
+			    <h3>13:15-13:30 - <a style="color:#B40431;">OPENING</a></h3>
 			       <br>
-			       The indicated times refer to <strong>East Kazakhstan time zone</strong>.
-			       See the <strong><a style="color:#B40431;" href="#SCHEDULE">SESSION. SCHEDULE</a> for other time zones</strong>
-		       </p>
+			       <p class="text">The indicated times refer to <strong>East Kazakhstan time zone</strong>.
+			         See the <strong><a style="color:#B40431;" href="#SCHEDULE">SESSION. SCHEDULE</a> for other time zones</strong>
+		               </p>
                     </td>
                   </tr>
                    <tr>
                     <td>
 		       <a name="OPENING"></a>
-                       <p class="text"><strong>13:30-14:30 - <a style="color:#B40431;">KEYNOTE SPEAKER 1: Kim Larsen</a></strong>
-			 (Chair: Peter Csaba Olveczky)
+                       <h3>13:30-14:30 - <a style="color:#B40431;">KEYNOTE SPEAKER 1: Kim Larsen</a></strong>
+			    (Chair: Peter Csaba Olveczky)</h3>
 			 <br>
-			 The indicated times refer to <strong>East Kazakhstan time zone</strong>.
-			 See the <strong><a style="color:#B40431;" href="#SCHEDULE">SESSION. SCHEDULE</a> for other time zones</strong>
+			 <p class="text">The indicated times refer to <strong>East Kazakhstan time zone</strong>.
+			   See the <strong><a style="color:#B40431;" href="#SCHEDULE">SESSION. SCHEDULE</a> for other time zones</strong></p>
                          <ul>
                            <li><strong><a style="color:#B40431;">Model Checking and Machine Learning Joining Forces<a></strong></li>
                          </ul>
