--- a/programme-GMT+6.html
+++ b/programme-GMT+6.html
@@ -74,7 +74,7 @@
     <th style='border-bottom:none'><a style="color:#B40431;">GMT</a></th>
   </tr>
   <tr align = "left">
-	  <th style='border-top:none'><a style="color:#B40431;" href="WED">WEDNESDAY</a></th>
+    <th style='border-top:none'></th>
     <th style='border-top:none'>or Break</th>
     <th style='border-top:none'></th>
     <th style='border-top:none'><a style="color:#B40431;">-6:00</a></th>
@@ -98,7 +98,7 @@
     <th style='border-top:none'><a style="color:#B40431;">+12:00</a></th>
   </tr>
   <tr align = "left">
-    <td><strong><a style="color:#B40431;">8 September</a></stong></td>
+    <td><strong><a style="color:#B40431;" href="#WED">WEDNESDAY</a></stong></td>
     <td><strong><a style="color:#B40431;" href="#OPENING">OPENING</a></stong></td>
     <td><strong>15 min.</strong></td>  
     <td><strong>1:15</strong></td>
@@ -144,7 +144,8 @@
   <li><strong><a style="color:#B40431;">GMT+10:00</a> - </strong> Brisbane, Hobart, Melbourne, Sydney, Vladivostok</li>
   <li><strong><a style="color:#B40431;">GMT+12:00</a> - </strong> Auckland, Fiji, Wellington</li>
 </ul>	
-		
+<br>	
+
 <a name="DETAILED"></a><h2 style="color:#B40431;">DETAILED PROGRAMME</h2>
 
 <hr size="1">
@@ -158,7 +159,7 @@
 			         See the <strong><a style="color:#B40431;" href="#SCHEDULE">SESSION. SCHEDULE</a> for other time zones</strong>
 		               </p>
                     </td>
-		    <br>
+		    <hr>
                    </tr>
                    <tr>
                     <td>
@@ -176,11 +177,13 @@
                          The session video recording will be linked from here.
                       </p>
                     </td>
+                    <hr>
                    </tr>
                    <tr>
                     <td>
                        <p class="text"><strong>14:30-15:00 - SHORT BREAK</strong></p>
                     </td>
+		    <hr>	   
                   </tr>               
                  <tr>
                     <td>
