--- a/programme-GMT+6.html
+++ b/programme-GMT+6.html
@@ -151,6 +151,7 @@
 <hr size="1">
 <a name="WED"></a>
 <h2 style="color:#B40431;">Wednesday, 8 September 2021</h2>
+<hr size="1">
                   <tr>
                     <td>
 		       <a name="OPENING"></a>
