--- a/programme-GMT+6.html
+++ b/programme-GMT+6.html
@@ -155,7 +155,7 @@
                   <tr>
                     <td>
 		       <a name="OPENING"></a>
-			    <h3>13:15-13:30 - <a style="color:#B40431;">OPENING</a></h3>
+			    <h3>WED 13:15-13:30 - <a style="color:#B40431;">OPENING</a></h3>
 			       <p class="text">The indicated times refer to <strong>East Kazakhstan time zone</strong>.
 			         See the <strong><a style="color:#B40431;" href="#SCHEDULE">SESSION. SCHEDULE</a> for other time zones</strong>
 		               </p>
@@ -165,7 +165,7 @@
                    <tr>
                     <td>
 		       <a name="OPENING"></a>
-                       <h3>13:30-14:30 - <a style="color:#B40431;">KEYNOTE SPEAKER 1: Kim Larsen</a></strong>
+                       <h3>WED 13:30-14:30 - <a style="color:#B40431;">KEYNOTE SPEAKER 1: Kim Larsen</a></strong>
 			    (Chair: Peter Csaba Olveczky)</h3>
 			 <p class="text">The indicated times refer to <strong>East Kazakhstan time zone</strong>.
 			   See the <strong><a style="color:#B40431;" href="#SCHEDULE">SESSION. SCHEDULE</a> for other time zones</strong></p>
